--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.classpath
+.project
+.settings
 
 # Package Files #
 *.jar
@@ -18,6 +21,8 @@
 *.zip
 *.tar.gz
 *.rar
+output*.txt
+target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
